--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,9 +15,10 @@ jobs:
         python-version: "3.9"
 
     - name: install dependency
+      uses: s-weigand/setup-conda@v1
       run: |
           python -m pip install --upgrade pip
-          $CONDA/bin/conda env update --file ./req/environment.yml --name base
+          conda env update --file ./req/environment.yml --name base
 
     - name: update feeds
           python feed.py>>./log/log
