--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,11 +14,11 @@ jobs:
       with:
         python-version: "3.9"
 
-    - name: install dependency
-      uses: s-weigand/setup-conda@v1
-      run: |
-          python -m pip install --upgrade pip
-          conda env update --file ./req/environment.yml --name base
+    # - name: install dependency
+    #   uses: s-weigand/setup-conda@v1
+    #   run: |
+    #       python -m pip install --upgrade pip
+    #       conda env update --file ./req/environment.yml --name base
 
     # - name: update feeds
     #       python feed.py>>./log/log
