--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -21,13 +21,13 @@ jobs:
         dir >> here
     
     # error starting here
-    # - name: install dependency
-    #   uses: s-weigand/setup-conda@v1
-    #   run: |
-    #       python -m pip install --upgrade pip
-    #       conda env update --file ./req/environment.yml --name base
+    - name: install dependency
+      uses: s-weigand/setup-conda@v1
+      run: |
+          python -m pip install --upgrade pip
+          conda env update --file ./req/environment.yml --name base
 
-    # - name: update feeds
-    #   run: |
-    #       python feed.py>>./log/log
+    - name: update feeds
+      run: |
+          python feed.py>>./log/log
 
