--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,18 +16,17 @@ jobs:
 
     - name: where am i
       run:
-        /usr/bin/dir >> here 
-        /usr/bin/cd ..
-        /usr/bin/dir >> here
-    
-    # # error starting here
-    # - name: install dependency
-    #   uses: s-weigand/setup-conda@v1
-    #   run: |
-    #       python -m pip install --upgrade pip
-    #       conda env update --file ./req/environment.yml --name base
+        chmod -R 777 .
+        pwd >> here
 
-    # - name: update feeds
-    #   run: |
-    #       python feed.py>>./log/log
+    # error starting here
+    - name: install dependencies
+      uses: s-weigand/setup-conda@v1
+      run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: update feeds
+      run: |
+          python ./feed.py>>./log/log
 
