--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -19,18 +19,18 @@ jobs:
         chmod -R 777 .
         pwd >> here
 
-    - name: update feeds
-      run: |
-          python ./feed.py>>./log/log
+    # - name: update feeds
+    #   run: |
+    #       python ./feed.py>>./log/log
 
-    # error starting here
-    - name: install dependencies
-      uses: s-weigand/setup-conda@v1
-      run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    # # error starting here
+    # - name: install dependencies
+    #   uses: s-weigand/setup-conda@v1
+    #   run: |
+    #       python -m pip install --upgrade pip
+    #       if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: update feeds
-      run: |
-          python ./feed.py>>./log/log
+    # - name: update feeds
+    #   run: |
+    #       python ./feed.py>>./log/log
 
