--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,14 +18,13 @@ jobs:
       run: |
         chmod -R 777 . |
         pwd
-        sudo cp -p ./pwc/ ./usr/bin
 
-    # # error starting here
-    # - name: install dependencies
-    #   uses: s-weigand/setup-conda@v1
-    #   run: |
-    #       python -m pip install --upgrade pip
-    #       if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    # error starting here
+    - name: install dependencies
+      uses: s-weigand/setup-conda@v1
+      run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     # - name: update feeds
     #   run: |
