--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -25,7 +25,7 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    # - name: update feeds
-    #   run: |
-    #       python ./feed.py>>./log/log
+    - name: update feeds
+      run: |
+          python ./feed.py>>./log/log
 
