--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -21,7 +21,8 @@ jobs:
 
     # error starting here
     - name: install dependencies
-      run: |
+    - uses: actions/checkout@v2
+    - run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
