--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,18 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: setup python
-      uses: actions/setup-python@v3
+      uses: 
+        actions/setup-python@v3
+        actions/checkout@v2
       with:
         python-version: "3.9"
 
-    - name: where am i
-      run: |
-        chmod -R 777 . |
-        pwd
-
     # error starting here
     - name: install dependencies
-    - uses: actions/checkout@v2
     - run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
