--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,16 +9,21 @@ jobs:
     name: update_rss_feeds
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
+
+    - run: |
+      chmod -R 777 ./log/log
+      chmod -R 777 ./rss
+
     - name: setup python
       uses: 
         actions/setup-python@v3
-        actions/checkout@v2
       with:
         python-version: "3.9"
 
     # error starting here
     - name: install dependencies
-    - run: |
+      run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
