--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,8 +12,8 @@ jobs:
     - uses: actions/checkout@v2
 
     - run: |
-      chmod -R 777 ./log/log
-      chmod -R 777 ./rss
+        chmod -R 777 ./log/log |
+        chmod -R 777 ./rss
 
     - name: setup python
       uses: 
