--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,22 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-ca-certificates=2022.4.26=haa95532_0
-cachetools=4.2.2=pyhd3eb1b0_0
-certifi=2022.5.18.1=py39haa95532_0
-charset-normalizer=2.0.12=pypi_0
-docopt=0.6.2=pypi_0
-feedgen=0.9.0=pypi_0
-humanize=3.10.0=pyhd3eb1b0_0
-idna=3.3=pypi_0
-lxml=4.9.0=pypi_0
-more-itertools=8.13.0=pypi_0
-openssl=1.1.1o=h2bbff1b_0
-pip=21.2.4=py39haa95532_0
-pipreqs=0.4.11=pypi_0
-python=3.9.12=h6244533_0
-python-dateutil=2.8.2=pypi_0
-requests=2.27.1=pypi_0
-setuptools=61.2.0=py39haa95532_0
+ca-certificates
+cachetools==4.2.2
+certifi
+charset-normalizer==2.0.12
+docopt==0.6.2
+feedgen==0.9.0
+humanize==3.10.0
+idna
+lxml==4.9.0
+more-itertools==8.13.0
+openssl
+python-dateutil
+requests
 six=1.16.0=pypi_0
-sqlite=3.38.3=h2bbff1b_0
-tzdata=2022a=hda174b7_0
-urllib3=1.26.9=pypi_0
-vc=14.2=h21ff451_1
-vs2015_runtime=14.27.29016=h5e58377_2
-wheel=0.37.1=pyhd3eb1b0_0
-wincertstore=0.2=py39haa95532_2
-yarg=0.1.9=pypi_0
+sqlite
+tzdata
+urllib3==1.26.9
+wincertstore
+yarg==0.1.9
